added lsh rows and bands numbers calculation for similarities and probabilities

--- a/Sample/Sample.csproj
+++ b/Sample/Sample.csproj
@@ -44,5 +44,11 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\LSH.Generic\LSH.Generic.csproj">
+      <Project>{ad20b73b-a122-4b68-86e2-e4d9cce6291a}</Project>
+      <Name>LSH.Generic</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
